2002-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_apic.c: restore correctly the lvtpc register

2002-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_hw_config.h: define DCOOKIE_SHIFT
	* daemon/opd_image.c: use it

2002-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/Makefile.in: cleanup, build and use libpp.a

2002-10-31  John Levon  <levon@movementarian.org>

	* pp/counter_array.cpp: using namespace std
 
2002-10-31  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/.cvsignore:
	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_sample_files.c:
	* dae/opd_stats.c:
	* dae/oprofiled.c:
	* daemon/opd_image.c:
	* daemon/opd_sample_files.c:
	* libop/op_config_24.h: cleanup, including some little merging
	  from daemon to dae

	* daemon/opd_image.c: change dcookie hashing function
	
	* doc/oprofile.xml: typo

2002-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: cleanup

	* pp/counter_array.h:
	* pp/counter_array.cpp: add a bool empty() member to counter_array_t
	* pp/sample_container_imp.cpp: use it

2002-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: minor cleanup. Use config.h rather than gcc -D option

	* libutil/op_libiberty.h:
	* libutil++/op_bfd.h:
	* pp/opp_symbol.h: #include <config.h>

	* libutil/Makefile.in:
	* pp/Makefile.in: remove BFD_CXXFLAGS

2002-10-24  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h: allow to specify explicetly on which symbol we
	  want to work.

	* pp/op_to_source_options.h:
	* pp/op_to_source_options.cpp:
	* pp/op_to_source.cpp: handle --include-symbol, for asm output only
	  output for symbols with samplels or selected symbols.

	* pp/oprofp.cpp:
	* pp/samplesc_ontainer.cpp: minor change to reflect op_bfd api change

2002-10-24  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c: revert 64 bit dcookie patch commited
	  accidentally with 2002-10-18 abi patch.
